# precios_claros

./: pyproject.toml
preciosclaros/: items.py  pipelines.py  settings.py
preciosclaros/spiders/: pclaros.py
