[tool.poetry]
name = "precios_claros"
version = "0.1.0"
description = ""
authors = ["N"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = ">=2.0.1"
pandas = ">=0.21"
shub = "2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
